# minecraft-server-rs

./: '  .gitignore  Cargo.toml  README.md  dev.sh  pbcopy  todo.md
minecraft/: :w  Cargo.toml
minecraft/.cargo/: config
minecraft/src/: chat.rs  connection_handler.rs  lib.rs  main.rs  packet_encoder.rs  packet_handler.rs  packet_read_handler.rs  player.rs  prelude.rs  server.rs  test.rs
minecraft/src/connection/: connection_handler.rs  mod.rs  packet_read_handler.rs  packet_reader.rs  packet_writer.rs  player.rs
minecraft/src/protocol/: mod.rs
minecraft/src/protocol/v1_20_1/: handshake.rs  login_start.rs  mod.rs  ping.rs  status.rs
minecraft/src/protocol/v1_20_4/: client_information.rs  feature_flags.rs  finish_configuration.rs  handshake.rs  login_acknowledged.rs  login_play.rs  login_start.rs  login_success.rs  mod.rs  ping.rs  plugin_message.rs  registry.rs  set_compression.rs  status.rs
minecraft/src/server/: chat.rs  game_mode.rs  mod.rs  particle.rs  position.rs  server_status.rs
minecraft_server/: Cargo.toml  registry_data.txt  run.sh  test.sh
minecraft_server/benches/: big_sized_struct.rs  box_cost.rs  dyn_cost.rs  encoding.rs  entity_metadata.rs  enum_dispatch.rs  fast_map.rs  i32_from_be_bytes.rs  if_branching.rs  match_branching.rs  match_i32.rs  matching_many_items.rs  nbt.rs  new_string.rs  option_unwrap.rs  prototype_vs_vec.rs  query_struct_vs_vec.rs  test_server.rs  vec.rs  vec_vs_vecdeque.rs
minecraft_server/src/: lib.rs  main.rs  test.rs
minecraft_server/src/client/: mod.rs  test_client.rs
minecraft_server/src/io/: array.rs  bitset.rs  buffer.rs  cache.rs  encoding.rs  fast_map.rs  identifier.rs  mod.rs  nbt.rs  option.rs  prelude.rs  primitive.rs  primitives.rs  uuid.rs  var_int.rs  var_long.rs  var_string.rs
minecraft_server/src/net/: bound.rs  mod.rs  packet.rs  packet_handler.rs  packet_identifier.rs  packet_reader.rs  packet_writer.rs  prelude.rs  protocol.rs  protocol_identifier.rs  selector.rs  server.rs  session_relay.rs  socket.rs
minecraft_server/src/protocol/: macros.rs  minecraft.rs  mod.rs  prelude.rs  protocol_macro.rs  protocols.rs
minecraft_server/src/protocol/v1_20_4/: client_information.rs  feature_flags.rs  finish_configuration.rs  handshake.rs  login_acknowledged.rs  login_play.rs  login_start.rs  login_success.rs  mod.rs  ping.rs  player_abilities.rs  player_info.rs  plugin_message.rs  registry.rs  server_data.rs  set_center_chunk.rs  set_compression.rs  set_default_position.rs  set_held_item.rs  set_render_distance.rs  set_simulation_distance.rs  status.rs  synchronize_player_position.rs  update_attributes.rs  update_time.rs  v1_20_4.rs
minecraft_server/src/protocol/v1_20_4/configuration/: acknowledge_finish_configuration.rs  client_information.rs  feature_flags.rs  finish_configuration.rs  mod.rs  player_abilities.rs  player_info.rs  plugin_message.rs  registry.rs  server_data.rs  set_center_chunk.rs  set_compression.rs  set_default_position.rs  set_held_item.rs  set_render_distance.rs  set_simulation_distance.rs  synchronize_player_position.rs  update_attributes.rs  update_tags.rs  update_time.rs
minecraft_server/src/protocol/v1_20_4/login/: login_acknowledged.rs  (+5 more)
minecraft_server/src/server/: chat.rs  chunk.rs  coordinates.rs  game_mode.rs  game_player.rs  generic_test.rs  hand.rs  light.rs  metadata.rs  mod.rs  palette.rs  particle.rs  player.rs  pose.rs  prelude.rs  server.rs  server_status.rs  session_relay.rs  slot.rs
minecraft_server/src/server/metadata/: data_types.rs  entity_metadata.rs  living_entity_metadata.rs  metadata.rs  mod.rs  player_metadata.rs  pose.rs  prelude.rs
minecraft_server/tests/: bigtest.nbt
(+168 files in other folders)
