[package]
name = "server-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]


[workspace.dependencies]
bytes = "1.5.0"
json = "0.12.4"
mio = { version = "0.8.10", features = ["os-poll", "net"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
derivative = "2.2.0"

[workspace]
members = ["common-server", "minecraft", "skeep"]
