[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
common_server = { path = "../common_server" }
bytes.workspace = true
json.workspace = true
mio.workspace = true
uuid = { workspace = true, features = ["serde"] }
derive_more.workspace = true
derivative.workspace = true
bitflags = "2.4.2"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
backtrace = "0.3.69"


