[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
common_server = { path = "../common_server" }
bytes.workspace = true
json.workspace = true
mio.workspace = true
uuid.workspace = true
derive_more.workspace = true
derivative.workspace = true
bitflags.workspace = true 
flate2.workspace = true
