[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

[dependencies]
common_server = { path = "../common_server" }
json.workspace = true
mio.workspace = true
uuid = { workspace = true, features = ["serde"] }
derive_more.workspace = true
derivative.workspace = true
bitflags.workspace = true 
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
hematite-nbt.workspace = true
