[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
mio = { version = "0.8.10", features = ["os-poll", "net"] }
derivative = "2.2.0"
derive_more = { version = "0.99.17", features = ["constructor"] }
bitflags = "2.4.2"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
hematite-nbt = "0.5.2"
serde_json = "1.0.114"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
delegate = "0.12.0"
dyn-clone = "1.0.17"
smart-default = "0.7.1"

[dev-dependencies]
criterion = "0.5.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
minecraft_server = { path = "./" }

[[bench]]
name = "new_string"
harness = false

